# numpy-financial

./: AGENTS.md  README.md  noxfile.py  pyproject.toml  sonar-project.properties
.azure/: azure-pipelines.yml  azure-pipelines.yml.bak-pre-mpcommon
.github/workflows/: publish_docs_to_pages.yml  pythonpackage.yml  type_check.yml
