[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "numpy-financial"
version = "1.1.20231201"
description = "Simple financial functions"
license = "BSD-3-Clause"
authors = ["Travis E. Oliphant et al."]
maintainers = ["Numpy Financial Developers <numpy-discussion@python.org>"]
readme = "README.md"
homepage = "https://numpy.org/numpy-financial/latest/"
repository = "https://github.com/numpy/numpy-financial"
documentation = "https://numpy.org/numpy-financial/latest/#functions"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
packages = [{include = "numpy_financial"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-azurepipelines = "*"
pep8 = "*"
isort = "*"
mypy = "*"
types-python-dateutil = "*"
pandas-stubs = "*"
pylint = "*"
pylint-mongoengine = "*"
bandit = "*"
pylint-pytest = "*"
responses = "^0.23"
liccheck = {git = "https://github.com/prometeia-erm/python-license-check", rev = "prometeia"}
setuptools = "^68.2.2"
ipython = "^8.17.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0"
numpydoc = "^1.5"
pydata-sphinx-theme = "^0.14.3"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.6"

[tool.poetry.group.bench.dependencies]
asv = "^0.6.1"

[[tool.poetry.source]]
name = "prometeia"
url = "https://testproject-modeling-platform.northeurope.cloudapp.azure.com/nexus/repository/prometeia/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

